--- a/requirements.txt
+++ b/requirements.txt
@@ -3,22 +3,29 @@ argon2-cffi-bindings==21.2.0
 attrs==21.2.0
 backcall==0.2.0
 bleach==4.1.0
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.9
+click==8.0.3
 colorama==0.4.4
 cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
+Flask==2.0.2
 fonttools==4.28.3
+idna==3.3
 importlib-resources==5.4.0
 ipykernel==6.6.0
 ipython==7.30.1
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
+itsdangerous==2.0.1
 jedi==0.18.1
 Jinja2==3.0.3
 joblib==1.1.0
+jsonify==0.5
 jsonschema==4.2.1
 jupyter==1.0.0
 jupyter-client==7.1.0
@@ -56,6 +63,7 @@ pywinpty==1.1.6
 pyzmq==22.3.0
 qtconsole==5.2.1
 QtPy==1.11.3
+requests==2.26.0
 scikit-learn==1.0.1
 scipy==1.7.3
 seaborn==0.11.2
@@ -66,7 +74,9 @@ testpath==0.5.0
 threadpoolctl==3.0.0
 tornado==6.1
 traitlets==5.1.1
+urllib3==1.26.7
 wcwidth==0.2.5
 webencodings==0.5.1
+Werkzeug==2.0.2
 widgetsnbextension==3.5.2
 zipp==3.6.0
